// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with multiple endpoints 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__title"
    >
      Dev Spaces endpoints
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-c-simple-list"
        data-testid="endpoints-list"
      >
        <ul>
          <li
            class=""
          >
            <a
              class="pf-c-simple-list__item-link"
              href=""
              tabindex="0"
            >
              <div
                class="pf-l-split"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="pf-c-truncate"
                  >
                    <span
                      class="pf-c-truncate__start"
                    >
                      https://url-1.com
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item"
                >
                  <span
                    aria-label="Default endpoint"
                    class="pf-c-label pf-m-blue pf-m-compact pf-u-ml-sm pf-u-mr-sm"
                  >
                    <span
                      class="pf-c-label__content"
                    >
                      Default
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <div
                    aria-label="Toggle dropdown"
                    class="pf-c-dropdown pf-m-align-right pf-u-float-right"
                    data-ouia-component-id="OUIA-Generated-Dropdown-2"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                    title="Toggle dropdown"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="Actions"
                      class="pf-c-dropdown__toggle"
                      data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
                      data-ouia-component-type="PF4/DropdownToggle"
                      data-ouia-safe="true"
                      id="pf-dropdown-toggle-id-1"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            class=""
          >
            <a
              class="pf-c-simple-list__item-link"
              href=""
              tabindex="0"
            >
              <div
                class="pf-l-split"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="pf-c-truncate"
                  >
                    <span
                      class="pf-c-truncate__start"
                    >
                      https://url-2.com
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <div
                    aria-label="Toggle dropdown"
                    class="pf-c-dropdown pf-m-align-right pf-u-float-right"
                    data-ouia-component-id="OUIA-Generated-Dropdown-3"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                    title="Toggle dropdown"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="Actions"
                      class="pf-c-dropdown__toggle"
                      data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
                      data-ouia-component-type="PF4/DropdownToggle"
                      data-ouia-safe="true"
                      id="pf-dropdown-toggle-id-2"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            class=""
          >
            <a
              class="pf-c-simple-list__item-link"
              href=""
              tabindex="0"
            >
              <div
                class="pf-l-split"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="pf-c-truncate"
                  >
                    <span
                      class="pf-c-truncate__start"
                    >
                      https://url-3.com
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <div
                    aria-label="Toggle dropdown"
                    class="pf-c-dropdown pf-m-align-right pf-u-float-right"
                    data-ouia-component-id="OUIA-Generated-Dropdown-4"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                    title="Toggle dropdown"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="Actions"
                      class="pf-c-dropdown__toggle"
                      data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
                      data-ouia-component-type="PF4/DropdownToggle"
                      data-ouia-safe="true"
                      id="pf-dropdown-toggle-id-3"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </a>
          </li>
        </ul>
      </div>
      <hr
        class="pf-c-divider pf-u-mt-md pf-u-mb-md"
      />
      <div
        class="pf-l-split"
      >
        <div
          class="pf-l-split__item form-text-input"
        >
          <form
            class="pf-c-form"
            novalidate=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="new endpoint"
                  class="pf-c-form-control"
                  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                  data-ouia-component-type="PF4/TextInput"
                  data-ouia-safe="true"
                  placeholder="Add endpoint"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          class="pf-l-split__item pf-m-fill form-fill"
        />
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="true"
            class="pf-c-button pf-m-primary pf-m-disabled"
            data-ouia-component-id="OUIA-Generated-Button-primary-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            Add
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`renders correctly with one endpoint 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__title"
    >
      Dev Spaces endpoints
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-c-simple-list"
        data-testid="endpoints-list"
      >
        <ul>
          <li
            class=""
          >
            <a
              class="pf-c-simple-list__item-link"
              href=""
              tabindex="0"
            >
              <div
                class="pf-l-split"
              >
                <div
                  class="pf-l-split__item"
                >
                  <span
                    class="pf-c-truncate"
                  >
                    <span
                      class="pf-c-truncate__start"
                    >
                      https://url-1.com
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item"
                >
                  <span
                    aria-label="Default endpoint"
                    class="pf-c-label pf-m-blue pf-m-compact pf-u-ml-sm pf-u-mr-sm"
                  >
                    <span
                      class="pf-c-label__content"
                    >
                      Default
                    </span>
                  </span>
                </div>
                <div
                  class="pf-l-split__item pf-m-fill"
                />
                <div
                  class="pf-l-split__item"
                >
                  <div
                    aria-label="Toggle dropdown"
                    class="pf-c-dropdown pf-m-align-right pf-u-float-right"
                    data-ouia-component-id="OUIA-Generated-Dropdown-1"
                    data-ouia-component-type="PF4/Dropdown"
                    data-ouia-safe="true"
                    title="Toggle dropdown"
                  >
                    <button
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="Actions"
                      class="pf-c-dropdown__toggle"
                      data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                      data-ouia-component-type="PF4/DropdownToggle"
                      data-ouia-safe="true"
                      id="pf-dropdown-toggle-id-0"
                      type="button"
                    >
                      <span>
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style="vertical-align: -0.125em;"
                          viewBox="0 0 192 512"
                          width="1em"
                        >
                          <path
                            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </a>
          </li>
        </ul>
      </div>
      <hr
        class="pf-c-divider pf-u-mt-md pf-u-mb-md"
      />
      <div
        class="pf-l-split"
      >
        <div
          class="pf-l-split__item form-text-input"
        >
          <form
            class="pf-c-form"
            novalidate=""
          >
            <div
              class="pf-c-form__group"
            >
              <div
                class="pf-c-form__group-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="new endpoint"
                  class="pf-c-form-control"
                  data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                  data-ouia-component-type="PF4/TextInput"
                  data-ouia-safe="true"
                  placeholder="Add endpoint"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </form>
        </div>
        <div
          class="pf-l-split__item pf-m-fill form-fill"
        />
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="true"
            class="pf-c-button pf-m-primary pf-m-disabled"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            Add
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
